--- a/index.html
+++ b/index.html
@@ -6,22 +6,236 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- bootstap styles -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  
     <title>Convention Center</title>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">TPQ Convention Hall</a>
-            </div>
-          </nav>
+        <!-- Navbar -->
+            <nav class="container navbar navbar-light bg-light">
+                <div class="container-fluid">
+                <a class="navbar-brand" href="#">TPQ Convention Hall</a>
+                </div>
+            </nav>
+        <!-- Image Slider -->
+            <section>
+                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="images/banner.png" class="d-block w-100" alt="">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h3>The perfect venue for your
+                            next event</h3>
+                          <p>Some representative placeholder content for the first slide.</p>
+                          <button class="btn btn-primary">Book Now</button>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/banner-2.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Second slide label</h5>
+                          <p>Some representative placeholder content for the second slide.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/banner-3.jfif" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Third slide label</h5>
+                          <p>Some representative placeholder content for the third slide.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+            </section>
     </header>
+  
     <main>
-
+        <!-- List of Package -->
+        <section class="container my-5">
+          <h1 class="text-center mt-5">Our Packages</h1>
+          <div class="row">
+            <div class="col-sm-3">
+              <div class="card border-0 my-4">
+                <div class="card-body">
+                  <h2 class="card-title">$300</h2>
+                  <h3 class="card-title">Business Fair</h3>
+                  <p class="card-text">For most businesses event 
+                    like book fair, craft fair.</p>
+                  <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                  </svg></span> space access</p>
+                  <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                  </svg></span> space access</p>
+                  <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                  </svg></span> space access</p>
+                  <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                  </svg></span> space access</p>
+                  <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                  </svg></span> space access</p>
+                  <button type="button" class="btn btn-outline-dark rounded-pill text-primary px-5 py-2">Buy Now</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <div class="card border-0 my-4">
+                <div class="card-body">
+                  <h2 class="card-title">$300</h2>
+                  <h3 class="card-title">Business Fair</h3>
+                  <p class="card-text">For most businesses event 
+                    like book fair, craft fair.</p>
+                  <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                  </svg></span> space access</p>
+                  <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                  </svg></span> space access</p>
+                  <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                  </svg></span> space access</p>
+                  <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                  </svg></span> space access</p>
+                  <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                  </svg></span> space access</p>
+                  <button type="button" class="btn btn-outline-dark rounded-pill text-primary px-5 py-2">Buy Now</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <div class="card">
+                <div class="card-body  rounded text-white bg-primary">
+                  <h2 class="card-title">$300</h2>
+                  <h3 class="card-title">Business Fair</h3>
+                  <p class="card-text">For most businesses event 
+                    like book fair, craft fair.</p>
+                  <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                  </svg></span> space access</p>
+                  <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                  </svg></span> space access</p>
+                  <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                  </svg></span> space access</p>
+                  <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                  </svg></span> space access</p>
+                  <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                  </svg></span> space access</p>
+                  <button type="button" class="btn btn-outline-dark rounded-pill text-primary px-5 py-2">Buy Now</button>
+                  <span class="position-absolute top-0 start-90 translate-middle badge rounded-pill bg-danger">
+                    Best Deal
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-3">
+              <div class="card border-0 my-4">
+                <div class="card-body">
+                  <h2 class="card-title">$300</h2>
+                  <h3 class="card-title">Business Fair</h3>
+                  <p class="card-text">For most businesses event 
+                    like book fair, craft fair.</p>
+                  <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                  </svg></span> space access</p>
+                  <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                  </svg></span> space access</p>
+                  <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                  </svg></span> space access</p>
+                  <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                  </svg></span> space access</p>
+                  <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                  </svg></span> space access</p>
+                  <button type="button" class="btn btn-outline-dark rounded-pill text-primary px-5 py-2">Buy Now</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- FAQ Section -->
+        <section class="container my-5">
+          <h1 class="text-center mb-5">Frequently Asked Questions</h1>
+          <div class="row align-items-center">
+            <div class="col-lg-6">
+              <div class="accordion" id="accordionPanelsStayOpenExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                      Accordion Item #1
+                    </button>
+                  </h2>
+                  <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+                    <div class="accordion-body">
+                      <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                      Accordion Item #2
+                    </button>
+                  </h2>
+                  <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+                    <div class="accordion-body">
+                      <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                      Accordion Item #3
+                    </button>
+                  </h2>
+                  <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+                    <div class="accordion-body">
+                      <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <img src="images/people.png" alt="">
+            </div>
+          </div>
+        </section>
     </main>
-    <footer>
-
-    </footer>
+    <footer class="bg-dark mt-5">
+      <div class="px-5 py-5 d-flex flex-lg-row justify-content-lg-between align-items-center flex-column-reverse text-white">
+        <div>
+          <p><small>© 2020 bike. All rights reserved</small></p>
+        </div>
+        <div>
+          <h4>Get the App</h4>
+        </div>
+      </div>
+    </footer>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
+  </body>
 </html>
