--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- bootstap styles -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  
+    <!-- css stylesheet  -->
+    <link rel="stylesheet" href="style.css">
     <title>Convention Center</title>
 </head>
 <body>
@@ -19,7 +20,7 @@
             </nav>
         <!-- Image Slider -->
             <section>
-                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div id="carouselExampleCaptions" class="carousel slide"  data-bs-ride="carousel">
                     <div class="carousel-indicators">
                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -28,7 +29,7 @@
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <img src="images/banner.png" class="d-block w-100" alt="">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption  d-md-block">
                           <h3>The perfect venue for your
                             next event</h3>
                           <p>Some representative placeholder content for the first slide.</p>
@@ -36,15 +37,15 @@
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="images/banner-2.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
+                        <img  src="images/banner-3.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption  d-md-block">
                           <h5>Second slide label</h5>
                           <p>Some representative placeholder content for the second slide.</p>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="images/banner-3.jfif" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
+                        <img src="images/banner4.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption  d-md-block">
                           <h5>Third slide label</h5>
                           <p>Some representative placeholder content for the third slide.</p>
                         </div>
@@ -62,14 +63,29 @@
             </section>
     </header>
   
-    <main>
+    <main class="container">
+        <!-- Toast -->
+        <section>
+          <div aria-live="polite" aria-atomic="true" class="position-relative">
+            <div class="toast-container position-absolute top-0 end-0  pe-5">
+              <div class="show toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="d-flex ps-3">
+                  <img src="icons/Vector.svg" alt="">
+                  <div class="toast-body">
+                  Hello, world! This is a toast message.
+                 </div>
+                  <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+                </div>
+              </div>
+          </div>
+        </section>
         <!-- List of Package -->
-        <section class="container my-5">
+        <section class="my-5">
           <h1 class="text-center mt-5">Our Packages</h1>
           <div class="row">
             <div class="col-sm-3">
-              <div class="card border-0 my-4">
-                <div class="card-body">
+              <div class="card border-0 ">
+                <div class="card-body mt-4">
                   <h2 class="card-title">$300</h2>
                   <h3 class="card-title">Business Fair</h3>
                   <p class="card-text">For most businesses event 
@@ -94,8 +110,8 @@
               </div>
             </div>
             <div class="col-sm-3">
-              <div class="card border-0 my-4">
-                <div class="card-body">
+              <div class="card border-0">
+                <div class="card-body mt-4">
                   <h2 class="card-title">$300</h2>
                   <h3 class="card-title">Business Fair</h3>
                   <p class="card-text">For most businesses event 
@@ -121,7 +137,7 @@
             </div>
             <div class="col-sm-3">
               <div class="card">
-                <div class="card-body  rounded text-white bg-primary">
+                <div class="card-body rounded text-white bg-primary ">
                   <h2 class="card-title">$300</h2>
                   <h3 class="card-title">Business Fair</h3>
                   <p class="card-text">For most businesses event 
@@ -141,7 +157,7 @@
                   <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
                   </svg></span> space access</p>
-                  <button type="button" class="btn btn-outline-dark rounded-pill text-primary px-5 py-2">Buy Now</button>
+                  <button type="button" class="btn btn-outline-dark rounded-pill text-white px-5 py-2">Buy Now</button>
                   <span class="position-absolute top-0 start-90 translate-middle badge rounded-pill bg-danger">
                     Best Deal
                   </span>
@@ -149,8 +165,8 @@
               </div>
             </div>
             <div class="col-sm-3">
-              <div class="card border-0 my-4">
-                <div class="card-body">
+              <div class="card border-0">
+                <div class="card-body mt-4">
                   <h2 class="card-title">$300</h2>
                   <h3 class="card-title">Business Fair</h3>
                   <p class="card-text">For most businesses event 
@@ -176,8 +192,117 @@
             </div>
           </div>
         </section>
+        <!-- image gallery -->
+        <section >
+          <h1 class="text-center">Event Showcase</h1>
+          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                  <div class="col">
+                    <div class="card h-100">
+                      <img height="250px" src="images/picture-1.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card h-100">
+                      <img  height="250px" src="images/picture-2.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a short card.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card h-100">
+                      <img height="250px" src="images/picture-3.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                  <div class="col">
+                    <div class="card h-100">
+                      <img height="250px" src="images/picture-4.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card h-100">
+                      <img  height="250px" src="images/picture-5.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a short card.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card h-100">
+                      <img height="250px" src="images/picture-6.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item ">
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                  <div class="col">
+                    <div class="card h-100">
+                      <img height="250px" src="images/picture-1.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card h-100">
+                      <img  height="250px" src="images/picture-2.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a short card.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card h-100">
+                      <img height="250px" src="images/picture-3.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </section>
         <!-- FAQ Section -->
-        <section class="container my-5">
+        <section class="my-5">
           <h1 class="text-center mb-5">Frequently Asked Questions</h1>
           <div class="row align-items-center">
             <div class="col-lg-6">
