--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </section>
     </header>
   
-    <main class="container">
+    <main>
         <!-- Toast -->
         <section >
           <div aria-live="polite" aria-atomic="true" class="position-relative">
@@ -86,7 +86,7 @@
           </div>
         </section>
         <!-- List of Package -->
-        <section class="my-5">
+        <section class="my-5 container">
           <h1 class="text-center mt-5">Our Packages</h1>
           <div class="row p-5">
             <div class="col-sm-3">
@@ -142,8 +142,8 @@
               </div>
             </div>
             <div class="col-sm-3">
-              <div class="card">
-                <div class="card-body rounded text-white bg-primary">
+              <div class="card border-0">
+                <div class="card-body text-white bg-primary best-package">
                   <h2 class="card-title">$800</h2>
                   <h3 class="card-title">Wedding Plus</h3>
                   <p class="card-text">For most weddings with premium plans</p>
@@ -198,8 +198,8 @@
           </div>
         </section>
         <!-- image gallery -->
-        <section >
-          <h1 class="text-center">Event Showcase</h1>
+        <section class="container">
+          <h1 class="text-center mb-5">Event Showcase</h1>
           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -208,8 +208,7 @@
                     <div class="card h-100">
                       <img height="250px" src="images/picture-1.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <h5 class="card-title text-center">Great Couple of All Time</h5>
                       </div>
                     </div>
                   </div>
@@ -217,8 +216,7 @@
                     <div class="card h-100">
                       <img  height="250px" src="images/picture-2.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a short card.</p>
+                        <h5 class="card-title text-center">Friends at Wedding dinner table</h5>
                       </div>
                     </div>
                   </div>
@@ -226,8 +224,7 @@
                     <div class="card h-100">
                       <img height="250px" src="images/picture-3.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                        <h5 class="card-title text-center">Group pic Bride and Groom</h5>
                       </div>
                     </div>
                   </div>
@@ -239,8 +236,7 @@
                     <div class="card h-100">
                       <img height="250px" src="images/picture-4.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <h5 class="card-title text-center">Phoebe At her Wedding</h5>
                       </div>
                     </div>
                   </div>
@@ -248,8 +244,7 @@
                     <div class="card h-100">
                       <img  height="250px" src="images/picture-5.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a short card.</p>
+                        <h5 class="card-title text-center">One Great Couple</h5>
                       </div>
                     </div>
                   </div>
@@ -257,8 +252,7 @@
                     <div class="card h-100">
                       <img height="250px" src="images/picture-6.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                        <h5 class="card-title text-center">Friends Gathering at the Wedding</h5>
                       </div>
                     </div>
                   </div>
@@ -276,7 +270,7 @@
           </div>
         </section>
         <!-- FAQ Section -->
-        <section class="my-5">
+        <section class="my-5 container">
           <h1 class="text-center mb-5">Frequently Asked Questions</h1>
           <div class="row align-items-center">
             <div class="col-lg-6 col-12">
