--- a/index.html
+++ b/index.html
@@ -30,29 +30,29 @@
                       <div class="carousel-item active height-fix">
                         <img src="images/banner-1.jpg" class="d-block w-100" alt="">
                         <div class="carousel-caption  d-block ">
-                          <h2 class="fs-1">The perfect venue for your<br>
-                            next event</h2>
-                          <p>The wedding is an important day in of the lifetime. Everyone wish to make this day’s celebrations to be grand and memorable forever. </p>
-                          <button class="btn btn-outline-primary border-1 bg-white text-primary fw-bold ps-4 pe-4">Book Now</button>
+                          <h1 >The perfect venue for your<br>
+                            next event</h1>
+                          <p class="header-p">The wedding is an important day in of the lifetime. Everyone wish to make this day’s celebrations to be grand and memorable forever. </p>
+                          <a href="#package" class="btn btn-outline-primary border-1 bg-white text-primary fw-bold ps-4 pe-4">Book Now</a>
                         </div>
                       </div>
                       <div class="carousel-item height-fix">
                         <img src="images/banner-2.png" class="d-block w-100" alt="">
                         <div class="carousel-caption  d-block ">
-                          <h2 class="fs-1">Sit back while we create the experience<br>
-                            of a lifetime</h2>
-                          <p>We can turn your wedding dreams into a reality!</p>
-                          <button class="btn btn-outline-primary border-1 bg-white text-primary fw-bold ps-4 pe-4">Book Now</button>
+                          <h1>Sit back while we create the experience<br>
+                            of a lifetime</h1>
+                          <p class="header-p">We can turn your wedding dreams into a reality!</p>
+                          <a href="#package" class="btn btn-outline-primary border-1 bg-white text-primary fw-bold ps-4 pe-4">Book Now</a>
                         </div>
                       </div>
                       <div class="carousel-item height-fix">
                         <img src="images/banner-3.png" class="d-block w-100" alt="">
                         <div class="carousel-caption  d-block ">
-                          <h2 class="fs-1">Every love story is beautiful, but yours 
+                          <h1 >Every love story is beautiful, but yours 
                             <br>
-                            should be unique.</h2>
-                          <p>For sharing all the need-to-know details with your guests—especially as things are changing on what may feel like a day-to-day basis</p>
-                          <button class="btn btn-outline-primary border-1 bg-white text-primary fw-bold ps-4 pe-4">Book Now</button>
+                            should be unique.</h1>
+                          <p class="header-p">For sharing all the need-to-know details with your guests—especially as things are changing on what may feel like a day-to-day basis</p>
+                          <a href="#package" class="btn btn-outline-primary border-1 bg-white text-primary fw-bold ps-4 pe-4">Book Now</a>
                         </div>
                       </div>
                     </div>
@@ -70,11 +70,11 @@
   
     <main>
         <!-- Toast -->
-        <section >
-          <div aria-live="polite" aria-atomic="true" class="position-relative">
+        <section class="toast-position" >
+          <div aria-live="polite" aria-atomic="true" class="position-relative ">
             <div class="toast-container position-absolute top-0 end-0">
               <div class="show toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
-                <div class="d-flex ps-3">
+                <div class="d-flex ms-2">
                   <img src="icons/Vector.svg" alt="">
                   <div class="toast-body">
                   20% !! off for Today..
@@ -84,12 +84,11 @@
               </div>
           </div>
           </div>
-        </section>
         <!-- List of Package -->
-        <section class="my-5 container">
-          <h1 class="text-center mt-5">Our Packages</h1>
-          <div class="row p-5">
-            <div class="col-sm-3">
+        <section class="my-lg-5 container" id="package">
+          <h2 class="text-center mt-5">Our Packages</h2>
+          <div class="row p-5 gy-5">
+            <div class="col-lg-3 col-md-6">
               <div class="card border-0">
                 <div class="card-body mt-4">
                   <h2 class="card-title">$300</h2>
@@ -98,24 +97,24 @@
                     like book fair, craft fair.</p>
                   <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 me-1 svg-color rounded-pill" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
-                  </svg></span>limited space access</p>
+                  </svg></span>Limited space access</p>
                   <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 me-1 svg-color rounded-pill" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
                   </svg></span>Secuirty facility</p>
                   <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 me-1 svg-color rounded-pill" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
-                  </svg></span>event support</p>
+                  </svg></span>Event support</p>
                   <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 me-1 svg-color rounded-pill" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
                   </svg></span>Decoration design</p>
                   <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 me-1 svg-color rounded-pill" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
                   </svg></span>Per day bill</p>
-                  <button type="button" class="btn btn-design border-0 fw-bold rounded-pill border-primary text-primary px-5 py-2">Choose Plan</button>
+                  <a class="btn btn-design border-0 fw-bold rounded-pill border-primary text-primary px-5 py-2" href="https://www.weddingwire.com/wedding-planning.html">Choose Plan</a>
                 </div>
               </div>
             </div>
-            <div class="col-sm-3">
+            <div class="col-lg-3 col-md-6">
               <div class="card border-0">
                 <div class="card-body mt-4">
                   <h2 class="card-title">$500</h2>
@@ -130,18 +129,18 @@
                   </svg></span>Food arrangement</p>
                   <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 me-1 svg-color rounded-pill" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
-                  </svg></span>mangement support</p>
+                  </svg></span>Mangement support</p>
                   <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 me-1 svg-color rounded-pill" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
                   </svg></span>Decoration design</p>
                   <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 me-1 svg-color rounded-pill" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
                   </svg></span>Billed as shift</p>
-                  <button type="button" class="btn btn-design border-0 fw-bold rounded-pill border-primary text-primary px-5 py-2">Choose Plan</button>
+                  <a class="btn btn-design border-0 fw-bold rounded-pill border-primary text-primary px-5 py-2" href="https://www.weddingwire.com/wedding-planning.html">Choose Plan</a>
                 </div>
               </div>
             </div>
-            <div class="col-sm-3">
+            <div class="col-lg-3 col-md-6">
               <div class="card border-0">
                 <div class="card-body text-white bg-primary best-package">
                   <h2 class="card-title">$800</h2>
@@ -158,18 +157,18 @@
                   </svg></span>Buffet food</p>
                   <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 me-1 " height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
-                  </svg></span>premium Decoration</p>
+                  </svg></span>Premium Decoration</p>
                   <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 me-1" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
-                  </svg></span>pay as plan</p>
-                  <button type="button" class="btn border-white fw-bold border-1 rounded-pill border-primary text-white px-5 py-2">Choose Plan</button>
+                  </svg></span>Pay as plan</p>
+                  <a class="btn border-white fw-bold border-1 rounded-pill border-primary text-white px-5 py-2" href="https://www.weddingwire.com/wedding-planning.html">Choose Plan</a>
                   <span class="position-absolute top-0 start-90 translate-middle badge rounded-pill bg-danger">
                     Best Deal
                   </span>
                 </div>
               </div>
             </div>
-            <div class="col-sm-3">
+            <div class="col-lg-3 col-md-6">
               <div class="card border-0">
                 <div class="card-body mt-4">
                   <h2 class="card-title">$1200</h2>
@@ -190,8 +189,8 @@
                   </svg></span>Premium Decoration</p>
                   <p><span><svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 me-1 svg-color rounded-pill" height="20px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
-                  </svg></span>pay as plan</p>
-                  <button type="button" class="btn btn-design border-0 fw-bold rounded-pill border-primary text-primary px-5 py-2">Choose Plan</button>
+                  </svg></span>Pay as plan</p>
+                  <a class="btn btn-design border-0 fw-bold rounded-pill border-primary text-primary px-5 py-2" href="https://www.weddingwire.com/wedding-planning.html">Choose Plan</a>
                 </div>
               </div>
             </div>
@@ -199,7 +198,7 @@
         </section>
         <!-- image gallery -->
         <section class="container">
-          <h1 class="text-center mb-5">Event Showcase</h1>
+          <h2 class="text-center mb-5">Event Showcase</h2>
           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -271,7 +270,7 @@
         </section>
         <!-- FAQ Section -->
         <section class="my-5 container">
-          <h1 class="text-center mb-5">Frequently Asked Questions</h1>
+          <h2 class="text-center mb-5">Frequently Asked Questions</h2>
           <div class="row align-items-center">
             <div class="col-lg-6 col-12">
               <div class="accordion" id="accordionPanelsStayOpenExample">
@@ -333,14 +332,15 @@
     </main>
     <footer class="bg-dark mt-5">
       <div class="px-5 py-5 d-flex flex-lg-row justify-content-lg-between align-items-center flex-column-reverse text-white">
-        <div>
-          <p><small>© 2020 bike. All rights reserved</small></p>
+        <div class="mt-lg-0 mt-5">
+          <p><small >© 2022 TPQ. All rights reserved</small></p>
         </div>
         <div>
           <h4>Get the App</h4>
           <div class="d-flex flex-column my-2">
-            <img width="135px" height="40px"  class="mb-2" src="images/android-app.jpg" alt="">
-            <img width="135px" height="40px" src="images/iphone-app.png" alt="">
+            <a href="https://apps.apple.com/us/app/wedding-planner/id1236966921"> <img width="135px" height="40px"  class="mb-2" src="images/android-app.jpg" alt=""></a>
+            <a href="https://play.google.com/store/apps/details?id=com.xogrp.planner&hl=en&gl=US"><img width="135px" height="40px" src="images/iphone-app.png" alt=""></a>
+            
           </div>
         </div>
       </div>
