--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
     </main>
     <footer class="bg-dark mt-5">
       <div class="px-5 py-5 d-flex flex-lg-row justify-content-lg-between align-items-center flex-column-reverse text-white">
-        <div class="mt-lg-0 mt-5">
+        <div >
           <p><small >© 2022 TPQ. All rights reserved</small></p>
         </div>
         <div>
